--- a/frontend/src/Css/Chatapp.css
+++ b/frontend/src/Css/Chatapp.css
@@ -7,9 +7,6 @@
   justify-content: space-between;
   background-color: #ffffff;
   background-image: linear-gradient(135deg, rgba(74, 22, 171, 0.05) 0%, rgba(255, 255, 255, 1) 100%);
+  overflow: hidden;
 }
-@media screen and(max-width:768px) {
-  .Chatappmaindiv{
-    height: 90vh;
-  }
-}
+
