--- a/frontend/src/Modules/ChatWindowHeaderCard.module.css
+++ b/frontend/src/Modules/ChatWindowHeaderCard.module.css
@@ -50,6 +50,8 @@
   border-radius: 50%;
   object-fit: cover;
   cursor: pointer;;
+  border: 1px solid black;
+  box-shadow: inset;
 }
 
 .AvatarInitials {
